# brobot-mcp-server

./: .bandit  .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties  test_api_endpoints.py  test_cli_integration.py  test_server.py  tox.ini
.github/: CI_CD_GUIDE.md  CODEOWNERS  dependabot.yml
.github/workflows/: build-cli.yml  code-quality.yml  dependency-scan.yml  publish.yml  release.yml  test.yml
brobot-cli/: README.md  build.gradle  settings.gradle
brobot-cli/src/main/java/io/github/jspinak/brobot/cli/: BrobotCLI.java  ExecuteActionCommand.java  GetObservationCommand.java  GetStateStructureCommand.java
brobot-cli/src/main/java/io/github/jspinak/brobot/cli/models/: ActionRequest.java  ActionResult.java  ObservationResponse.java  StateStructureResponse.java
brobot-cli/src/main/resources/: logback.xml
brobot_client/: README.md  pyproject.toml  setup.py
brobot_client/brobot_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  retry.py
brobot_client/examples/: async_example.py  basic_usage.py
brobot_client/tests/: test_async_client.py  test_client.py  test_exceptions.py  test_sync_client.py
docs/: API.md  README.md
examples/: example_client.py
mcp_server/: __init__.py  api.py  brobot_bridge.py  config.py  main.py  models.py
scripts/: analyze_tests.py  basic_test.py  run_tests.sh  simulate_test_run.py  test_summary.py  validate_structure.py
tests/: README.md  __init__.py  conftest.py  factories.py  utils.py
tests/integration/: __init__.py  test_client_server_integration.py  test_server_cli_integration.py
tests/unit/: __init__.py  test_api.py  test_brobot_bridge.py  test_config.py  test_main.py  test_models.py
